# 584project

./: .gitignore  README.md  pyproject.toml
configs/: experiment.yaml  smoke_test.yaml
docs/: final_report_template.md
scripts/: clean_env.sh  run_full_pipeline.ps1  run_smoke_test.ps1  setup_env.sh  slurm_eval.sh  slurm_eval_resume.sh  slurm_pipeline.sh  slurm_train_code.sh  slurm_train_math.sh  submit_all.sh
src/lora_merge_project/: __init__.py  config.py  utils.py
src/lora_merge_project/data/: prepare_datasets.py
src/lora_merge_project/evaluation/: code_eval.py  common.py  math_eval.py  summarize_results.py  task_vector_analysis.py
src/lora_merge_project/merging/: algorithms.py  merge_adapters.py
src/lora_merge_project/training/: formatters.py  train_lora.py
